--- a/Web.config
+++ b/Web.config
@@ -12,4 +12,11 @@
       <httpRuntime targetFramework="4.5" />
     </system.web>
 
+    <system.webServer>
+      <staticContent>
+        <mimeMap fileExtension=".json" mimeType="application/json" />
+        <mimeMap fileExtension=".md" mimeType="text/plain" />
+      </staticContent>
+    </system.webServer>
+
 </configuration>
